--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,18 @@ on:
 jobs:
   tagged-release:
     name: "Tagged Release"
-    runs-on: ubuntu-latest
-    container:
-      image: debian:buster
+    runs-on: ubuntu-20.04
+    #container:
+    #  image: debian:buster
 
     steps:
 
       - name: Install third party dependencies
-        run: apt update && apt install -y build-essential libssl-dev zlib1g-dev
+        run: sudo apt install build-essential libssl-dev zlib1g-dev
 
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Build
         run: |
@@ -30,58 +32,18 @@ jobs:
           echo "Produced artifact at ${PWD}/artifacts/ldb"
 
       - name: 'Tar files'
-        run: tar czvf ldb-${{ github.ref_name }}-amd64.tar.gz ./artifacts/*
+        run: tar czvf ldb-${{ github.ref_name }}-linux-amd64.tar.gz -C artifacts/ .
 
       - name: Prepare deb package
-        run: |
-          mkdir -p ./dist/.debpkg/usr/local/bin
-          mkdir -p ./dist/.debpkg/usr/local/lib
-          cp ldb ./dist/.debpkg/usr/local/bin/ldb
-          chmod +x ./dist/.debpkg/usr/local/bin/ldb
-          cp libldb.so ./dist/.debpkg/usr/local/lib/libldb.so
-          mkdir -p ./dist/.debpkg/DEBIAN
-
-          echo "Package: ldb" > ./dist/.debpkg/DEBIAN/control
-          echo "Version: ${{ github.ref_name }}" > ./dist/.debpkg/DEBIAN/control
-          echo "Maintainer: SCANOSS <support@scanoss.com>" > ./dist/.debpkg/DEBIAN/control
-          echo "Architecture: amd64" > ./dist/.debpkg/DEBIAN/control
-          echo "Description: SCANOSS ldb" > ./dist/.debpkg/DEBIAN/control
-
-      - uses: jiro4989/build-deb-action@v2
         id: build_deb
-        with:
-          package: ldb
-          package_root: ./dist/.debpkg
-          maintainer: SCANOSS <support@scanoss.com>
-          version: ${{ github.ref }} # refs/tags/v*.*.*
-          arch: amd64
-          depends: 'openssl, zlib'
-          desc: 'SCANOSS ldb'
-          
-      - name: Fix deb package naming
         run: |
-          file=`echo ${{ steps.build_deb.outputs.file_name }}`
-          fileDest=`echo $file | sed 's/_/-/g'`
-          mv $file $fileDest
-      
+          make prepare_deb_package
+          echo "debpkg_file_name=$(ls *.deb)" >> $GITHUB_OUTPUT
 
       - name: Prepare rpm package
         run: |
-          mkdir -p ./dist/.rpmpkg/usr/bin
-          mkdir -p ./dist/.rpmpkg/usr/lib
-          cp ldb ./dist/.rpmpkg/usr/bin/ldb
-          chmod +x ./dist/.rpmpkg/usr/bin/ldb
-          cp libldb.so ./dist/.rpmpkg/usr/lib/libldb.so
-
-      - uses: jiro4989/build-rpm-action@v2
-        with:
-          summary: 'SCANOSS LDB'
-          package: ldb
-          package_root: ./dist/.rpmpkg
-          maintainer: SCANOSS
-          version: ${{ github.ref }} # refs/tags/v*.*.*
-          arch: x86_64
-          desc: 'SCANOSS ldb'
+          make prepare_rpm_package
+          echo "rpmpkg_file_name=$(ls dist/rpm/RPMS/x86_64/*.rpm)" >> $GITHUB_OUTPUT
 
       - name: Show the artifacts
         # Items placed in /artifacts in the container will be in
@@ -89,7 +51,7 @@ jobs:
         run: |
           ls -al "${PWD}/artifacts"
           ls -al "${PWD}"
-          ls -al "${PWD}"
+          ls -al "${PWD}/dist/rpm/RPMS/x86_64/"
 
       - name: Create Draft Release ${{ github.ref_type }} - ${{ github.ref_name }}
         if: github.ref_type == 'tag'
@@ -99,4 +61,4 @@ jobs:
           files: |
             ./*.tar.gz
             ./*.deb
-            ./ldb-${{ github.ref_name }}-1.el7.x86_64.rpm
+            ./dist/rpm/RPMS/x86_64/*.rpm
